Migrate to java 11 and jakartaee 10, update code for future changes and remove obj selection on start

--- a/src/main/webapp/resources/css/objTreeStyle.css
+++ b/src/main/webapp/resources/css/objTreeStyle.css
@@ -152,7 +152,7 @@ body .ui-tree .ui-tree-container .ui-treenode .ui-treenode-content .ui-tree-togg
     display: none;
 }
 
-/*Стили выделения элементов дерева в закладке "Линкованные объекты / (Вычислимые параметры, Параметры)"*/
+/*Стили выделения элементов дерева*/
 
 body .ui-tree .ui-tree-container .ui-treenode .ui-treenode-content.ui-tree-selectable:not(.ui-state-highlight).ui-state-hover {
     background: #eaeaea;
